fix scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1269,17 +1269,18 @@ table.woocommerce-table.woocommerce-table--order-details.shop_table.order_detail
 .block__left-img{
     /* width: 7.25rem; */
     width: 15.25rem;
-    position: fixed;
+    /*position: fixed;*/
 }
 .block__left-text{
     /* width: 7.87rem; */
     width: 14.87rem;
-    padding-top: 140px;
+    /* padding-top: 140px; */
     overflow-y: auto;
-    height: 100%;
+    height: 66%;
 }
 .block__left-text.bigPadd {
-    padding-top: 174px;
+    /*padding-top: 174px;*/
+    height: 57%;
 }
 .block5-link{
     margin-top: 0.3rem;
